---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/pattern_match_encoding.bend
---
(Foo) = λa (a λ* 100 λ* 200 λ* 200 λ* λ* 200 λ* λ* 200)

(main) = (Foo MyType/A 2)

(MyType/A) = λa λb λ* λ* λ* λ* (b a)

(MyType/B) = λa λ* λc λ* λ* λ* (c a)

(MyType/C) = λa λ* λ* λd λ* λ* (d a)

(MyType/D) = λa λb λ* λ* λ* λf λ* (f a b)

(MyType/E) = λa λb λ* λ* λ* λ* λg (g a b)
